--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,6 +6,8 @@
     --light-font-color-01: rgb(46, 46, 46);
     --visual-id-colort: #F9322C;
     --visual-id-color2: rgb(46, 46, 46);
+    --ck-clipboard-drop-target-color:  #F9322C !important;
+    --ck-color-focus-border: #F9322C !important;
 }
 
 html, body {
@@ -157,6 +159,13 @@ li {
     background-color: rgb(240, 240, 240);
 }
 
+p>img {
+    display: block;
+    margin: auto;
+    max-width:80%;
+    width: auto;
+    height: auto;
+}
 
 .right-content h1 {
     margin: 0;
